--- a/Cuaderno/tex/titulo-dia3.tex
+++ b/Cuaderno/tex/titulo-dia3.tex
@@ -15,7 +15,7 @@
       %      \label{fig:Phyrex}
       %    \end{figure}
       \Huge Tutorial Diario\\
-      \huge Día 3\\
+      \huge Día 3
       %      \begin{figure}[H]
       %        \centering
       %        \includegraphics[width=0.2\textwidth]{PTI.jpg}
